examples/test/testpolicy4767.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4767
  namespace: namespace323
spec:
  podSelector:
    matchLabels:
      key31: value11
      key36: value38
      key14: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value35
      podSelector:
        matchLabels:
          key23: value40
          key4: value2
          key5: value45
